--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,30 @@
-aiofiles
-jinja2
-starlette
-uvicorn
-
-# Testing
-black
-pytest
-requests
+aiofiles==0.4.0
+appdirs==1.4.3
+atomicwrites==1.3.0
+attrs==19.2.0
+black==19.3b0
+certifi==2019.9.11
+chardet==3.0.4
+Click==7.0
+h11==0.8.1
+httptools==0.0.13
+idna==2.8
+importlib-metadata==0.23
+Jinja2==2.10.1
+MarkupSafe==1.1.1
+more-itertools==7.2.0
+packaging==19.2
+pluggy==0.13.0
+py==1.8.0
+pyparsing==2.4.2
+pytest==5.2.0
+requests==2.22.0
+six==1.12.0
+starlette==0.12.9
+toml==0.10.0
+urllib3==1.25.6
+uvicorn==0.9.0
+uvloop==0.13.0
+wcwidth==0.1.7
+websockets==8.0.2
+zipp==0.6.0
