--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
 aiofiles==0.4.0
+aiosqlite==0.10.0
+alembic==1.2.1
 appdirs==1.4.3
 atomicwrites==1.3.0
 attrs==19.2.0
@@ -7,22 +9,28 @@ certifi==2019.9.11
 chardet==3.0.4
 Click==7.0
 coverage==4.5.4
+databases==0.2.5
 h11==0.8.1
 httptools==0.0.13
 idna==2.8
 importlib-metadata==0.23
-Jinja2==2.10.1
+Jinja2==2.10.3
+Mako==1.1.0
 MarkupSafe==1.1.1
 more-itertools==7.2.0
 packaging==19.2
 pluggy==0.13.0
 py==1.8.0
 pyparsing==2.4.2
-pytest==5.2.0
-pytest-cov==2.7.1
+pytest==5.2.1
+pytest-cov==2.8.1
+python-dateutil==2.8.0
+python-editor==1.0.4
 requests==2.22.0
 sentry-sdk==0.12.3
 six==1.12.0
+SQLAlchemy==1.3.9
+SQLAlchemy-Utils==0.34.2
 starlette==0.12.9
 toml==0.10.0
 urllib3==1.25.6
