--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 aiofiles==0.4.0
-aiosqlite==0.10.0
 alembic==1.2.1
 appdirs==1.4.3
+asyncpg==0.18.3
 atomicwrites==1.3.0
 attrs==19.2.0
 black==19.3b0
@@ -20,6 +20,7 @@ MarkupSafe==1.1.1
 more-itertools==7.2.0
 packaging==19.2
 pluggy==0.13.0
+psycopg2-binary==2.8.3
 py==1.8.0
 pyparsing==2.4.2
 pytest==5.2.1
