--- a/requirements.txt
+++ b/requirements.txt
@@ -27,6 +27,7 @@ pytest==5.2.1
 pytest-cov==2.8.1
 python-dateutil==2.8.0
 python-editor==1.0.4
+python-multipart==0.0.5
 requests==2.22.0
 sentry-sdk==0.12.3
 six==1.12.0
