--- a/requirements.txt
+++ b/requirements.txt
@@ -35,6 +35,7 @@ SQLAlchemy==1.3.9
 SQLAlchemy-Utils==0.34.2
 starlette==0.12.9
 toml==0.10.0
+typesystem==0.2.4
 urllib3==1.25.6
 uvicorn==0.9.0
 uvloop==0.13.0
