--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
 aiofiles==0.4.0
 alembic==1.2.1
 appdirs==1.4.3
-asyncpg==0.18.3
+asyncpg==0.19.0
 atomicwrites==1.3.0
-attrs==19.2.0
+attrs==19.3.0
+awesome-slugify==1.6.5
 black==19.3b0
 certifi==2019.9.11
 chardet==3.0.4
@@ -28,14 +29,16 @@ pytest-cov==2.8.1
 python-dateutil==2.8.0
 python-editor==1.0.4
 python-multipart==0.0.5
+regex==2019.8.19
 requests==2.22.0
 sentry-sdk==0.12.3
 six==1.12.0
-SQLAlchemy==1.3.9
+SQLAlchemy==1.3.10
 SQLAlchemy-Utils==0.34.2
-starlette==0.12.9
+starlette==0.12.10
 toml==0.10.0
 typesystem==0.2.4
+Unidecode==0.4.21
 urllib3==1.25.6
 uvicorn==0.9.0
 uvloop==0.13.0
