--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ asyncpg==0.19.0
 atomicwrites==1.3.0
 attrs==19.3.0
 awesome-slugify==1.6.5
-black==19.3b0
+black==19.10b0
 certifi==2019.9.11
 chardet==3.0.4
 Click==7.0
@@ -20,13 +20,15 @@ Mako==1.1.0
 MarkupSafe==1.1.1
 more-itertools==7.2.0
 packaging==19.2
+pathspec==0.6.0
 pluggy==0.13.0
-psycopg2-binary==2.8.3
+psycopg2-binary==2.8.4
 py==1.8.0
 pyparsing==2.4.2
-pytest==5.2.1
+pytest==5.2.2
 pytest-cov==2.8.1
 python-dateutil==2.8.0
+python-dotenv==0.10.3
 python-editor==1.0.4
 python-multipart==0.0.5
 regex==2019.8.19
@@ -37,11 +39,12 @@ SQLAlchemy==1.3.10
 SQLAlchemy-Utils==0.34.2
 starlette==0.12.10
 toml==0.10.0
+typed-ast==1.4.0
 typesystem==0.2.4
 Unidecode==0.4.21
 urllib3==1.25.6
-uvicorn==0.9.0
-uvloop==0.13.0
+uvicorn==0.10.0
+uvloop==0.14.0rc2
 wcwidth==0.1.7
 websockets==8.0.2
 zipp==0.6.0
