--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 aiofiles==0.4.0
-alembic==1.3.0
+alembic==1.3.1
 appdirs==1.4.3
 asyncpg==0.19.0
 atomicwrites==1.3.0
@@ -14,7 +14,7 @@ databases==0.2.6
 h11==0.8.1
 h2==3.1.1
 hpack==3.0.0
-hstspreload==2019.11.4
+hstspreload==2019.11.12
 httptools==0.0.13
 httpx==0.7.6
 hyperframe==5.2.0
@@ -42,16 +42,16 @@ requests==2.22.0
 rfc3986==1.3.2
 sentry-sdk==0.12.3
 six==1.13.0
-SQLAlchemy==1.3.10
+SQLAlchemy==1.3.11
 SQLAlchemy-Utils==0.34.2
-starlette==0.12.13
+starlette==0.13.0
 toml==0.10.0
 typed-ast==1.4.0
 typesystem==0.2.4
 Unidecode==0.4.21
 urllib3==1.25.7
-uvicorn==0.10.4
-uvloop==0.14.0rc2
+uvicorn==0.10.8
+uvloop==0.14.0
 wcwidth==0.1.7
 websockets==8.1
 zipp==0.6.0
