--- a/requirements.txt
+++ b/requirements.txt
@@ -1,58 +1,59 @@
 aiofiles==0.4.0
-alembic==1.3.1
+alembic==1.4.0
 appdirs==1.4.3
-asyncpg==0.19.0
-atomicwrites==1.3.0
+asyncio-redis==0.15.1
+asyncpg==0.20.1
 attrs==19.3.0
 awesome-slugify==1.6.5
 black==19.10b0
-certifi==2019.9.11
+certifi==2019.11.28
 chardet==3.0.4
 Click==7.0
-coverage==4.5.4
+coverage==5.0.3
 databases==0.2.6
-h11==0.8.1
-h2==3.1.1
+h11==0.9.0
+h2==3.2.0
 hpack==3.0.0
-hstspreload==2019.11.12
+hstspreload==2020.2.5
 httptools==0.0.13
-httpx==0.7.7
+httpx==0.11.1
 hyperframe==5.2.0
 idna==2.8
-importlib-metadata==0.23
+importlib-metadata==1.5.0
 itsdangerous==1.1.0
-Jinja2==2.10.3
-Mako==1.1.0
+Jinja2==2.11.1
+Mako==1.1.1
 MarkupSafe==1.1.1
-more-itertools==7.2.0
-packaging==19.2
-pathspec==0.6.0
-pluggy==0.13.0
+more-itertools==8.2.0
+packaging==20.1
+pathspec==0.7.0
+pluggy==0.13.1
 psycopg2-binary==2.8.4
-py==1.8.0
-pyparsing==2.4.5
-pytest==5.2.3
+py==1.8.1
+pyparsing==2.4.6
+pytest==5.3.5
 pytest-asyncio==0.10.0
 pytest-cov==2.8.1
 python-dateutil==2.8.1
-python-dotenv==0.10.3
+python-dotenv==0.10.5
 python-editor==1.0.4
 python-multipart==0.0.5
-regex==2019.11.1
+regex==2020.1.8
 requests==2.22.0
 rfc3986==1.3.2
 sentry-sdk==0.12.3
-six==1.13.0
-SQLAlchemy==1.3.11
+six==1.14.0
+sniffio==1.1.0
+SQLAlchemy==1.3.13
 SQLAlchemy-Utils==0.34.2
-starlette==0.13.0
+starlette==0.13.1
 toml==0.10.0
-typed-ast==1.4.0
+typed-ast==1.4.1
 typesystem==0.2.4
 Unidecode==0.4.21
-urllib3==1.25.7
-uvicorn==0.10.8
+urllib3==1.25.8
+uvicorn==0.10.9
 uvloop==0.14.0
-wcwidth==0.1.7
+wcwidth==0.1.8
 websockets==8.1
-zipp==0.6.0
+zipp==2.2.0
